[package]
name = "ethereumtx-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.21.3", features = ["recovery", "rand"] }
rlp = "0.5.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
ethereum-types = "0.13.1"

[dev-dependencies]
rstest = "0.12.0"
